- Rewrite Ch 3 Summary, include tables of the metrics covered - Make notation more consistent, - Z binary - Don't call everything r and d - Use S for entropy, H is the Heaviside function - Fix Rules of probability table in the appendix - Remove table formatting in tweak.css - Don't use \usepackage{makecell}

--- a/tex2html/css/tweak.css
+++ b/tex2html/css/tweak.css
@@ -70,13 +70,13 @@ caption {
     margin-bottom: 0;
     padding: 0;
 }
-/* Specific Tables */
+/* Specific Tables
 div[id="tbl:app_ProbRules"] table { 
   border: none;
 }
 div[id="tbl:app_ProbRules"] td { 
   border: none;
-}
+} */
 
 
 /* Headers */
