Update Group Fairness (ch 3) to include more detailed content analysing graphical models and compatibility between group fairness criteria
- Ch3: Fix header levels and names
- Ch3: Add graphical models figure Fig_SepSuf
- Ch3: Remove stop-and-frisk questions
- Update table formatting for specific tables in tweak.css (ch 1 & 3)
- Minor rewording Pt I introduction, ch 1 & 5
- Remove Further Work sections in ch 4 & 5

--- a/tex2html/css/tweak.css
+++ b/tex2html/css/tweak.css
@@ -70,14 +70,18 @@ caption {
     margin-bottom: 0;
     padding: 0;
 }
-/* Specific Tables
-div[id="tbl:app_ProbRules"] table { 
+/* Specific Tables */
+div[id="tbl:Compatibility"] table,
+div[id="tbl:Compatibility"] td,
+div[id="tbl:Compatibility"] th { 
   border: none;
 }
-div[id="tbl:app_ProbRules"] td { 
-  border: none;
-} */
-
+div[id="tbl:SimpPara"] td[rowspan] {
+    vertical-align: bottom;
+}
+div[id="tbl:Compatibility"] td[rowspan] {
+    vertical-align: middle;
+}
 
 /* Headers */
 h4 {
